<resources>
    <string name="app_name">GPS Alarm</string>
    <string name="select">Select</string>
    <string name="location">Location</string>
    <string name="startCheckTime">Check Start TIme</string>
    <string name="checkFrequeny">Check Frequency</string>
    <string name="alarm">Alarm</string>
    <string name="go">Go!</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="delayTimeHint">Insert a time</string>
    <string name="checkFrequencyHint">Time interval: seconds</string>
    <string name="locationError">don\'t leave blank!</string>
    <string name="alarmSelectionText">Use Default</string>
    <string name="badSelection">Bad values for selection</string>
    <string name="notification_title">GPS Alarm</string>
    <string name="notification_message">Searching</string>
    <string name="distanceTrigger">Distance Away (meters)</string>
</resources>
