<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gpsalarm.StartActivity">

    <TextView
        android:id="@+id/selectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/locationButton"
        app:layout_constraintRight_toLeftOf="@+id/locationButton"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="openLocationSelection"
        android:text="@string/select"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        app:layout_constraintLeft_toRightOf="@+id/locationText"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/delaySelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/delayButton"
        app:layout_constraintRight_toLeftOf="@+id/delayButton"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/delayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:onClick="openDelaySelection"
        android:text="@string/select"
        app:layout_constraintLeft_toRightOf="@+id/delayText"
        app:layout_constraintTop_toBottomOf="@+id/delayText"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/frequencySelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkFrequencyButton"
        app:layout_constraintRight_toLeftOf="@+id/checkFrequencyButton"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/checkFrequencyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:onClick="openCheckFrequencySelection"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/checkFrequencyText"
        app:layout_constraintLeft_toRightOf="@+id/checkFrequencyText"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/alarmSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/alarmButton"
        app:layout_constraintRight_toLeftOf="@+id/alarmButton"
        android:layout_marginRight="7dp" />

    <Button
        android:id="@+id/alarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="openAlarmSelection"
        android:text="@string/select"
        app:layout_constraintLeft_toRightOf="@+id/alarmText"
        app:layout_constraintTop_toBottomOf="@+id/alarmText"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/selectText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/delayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startCheckTime"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/locationButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/checkFrequencyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkFrequeny"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/delayButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/alarmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/checkFrequencyButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="submit"
        android:text="@string/go"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceEditText"
        app:layout_constraintHorizontal_bias="0.498" />

    <TextView
        android:id="@+id/startErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintRight_toLeftOf="@+id/button"
        android:layout_marginEnd="16dp" />

    <Spinner
        android:id="@+id/locationFinder"
        android:layout_width="112dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/alarmButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/distanceTrigger"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationFinder" />

    <EditText
        android:id="@+id/distanceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number|numberSigned"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceText" />
</android.support.constraint.ConstraintLayout>
